Line graph to bar graph, added colors, fixed z-index styling.
Graph now appears on maindisplay thanks to z-index fix.

--- a/src/wtf/replay/graphics/ui/rangeseeker.less
+++ b/src/wtf/replay/graphics/ui/rangeseeker.less
@@ -16,7 +16,6 @@
   & .canvas {
     cursor: crosshair;
     position: fixed;
-    z-index: -1; // Avoid doing this?
   }
 
   & .graphicsReplayRangeSeekerDisplayer {
@@ -35,6 +34,7 @@
     display: inline-block;
     margin: 5px 0 0 10px;
     width: 90%;
+    position: relative;
 
     & input {
       width: 100%;
